--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -7,7 +7,7 @@ cloudbees-slack-integration:
       jenkins: "germandelriobilbao"
       optedIn: true
       scmId: "germandelriobilbao"
-      slack: "REPLACE_USER_EMAIL"
+      slack: "germandelriobilbao@gmail.com"
       slackWorkspace: "T010A455W77"
 cloudbees-pipeline-policies:
   config:
